# 2025_OpenGL_Figures

./: .gitignore  CMakeLists.txt
sources/: gl_utility.cpp  gl_utility.h  main.cpp  shader.cpp  shader.h
sources/cpp_sources/: figures_data.cpp  figures_data.h  gl_utility.cpp  gl_utility.h  main.cpp  shader.cpp  shader.h  shape.cpp  shape.h  version.h_cmake_in
sources/shaders/: 1_Interpolation.frag  1_StaticObj_Interpolation.vert  2_StaticObj.vert  2_dynamicInterpolation.frag  DynamicColor.frag  DynamicColor_UniformColor.frag  DynamicInterpolation.frag  DynamicObj.vert  Interpolation.frag  StaticObj.vert  StaticObj_Color.vert  fragment.frag  vertex.vert
